[gd_scene load_steps=13 format=3 uid="uid://0xhhbwns2t0m"]

[ext_resource type="Script" uid="uid://i4hg4kyovv4v" path="res://Scripts/slime.gd" id="1_aiwxb"]
[ext_resource type="Texture2D" uid="uid://d1sq33cjgfpi2" path="res://Sprites/death.png" id="1_swwnm"]
[ext_resource type="Texture2D" uid="uid://df7l6ri0b2rrc" path="res://Sprites/copyright free slime.png" id="2_aiwxb"]
[ext_resource type="AudioStream" uid="uid://dipnw6wmn25ba" path="res://Audio/slime_noise.mp3" id="4_f4si1"]
[ext_resource type="AudioStream" uid="uid://ltqn0ysw65kt" path="res://Audio/hit_slime.mp3" id="5_5gljc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_paq7w"]
atlas = ExtResource("1_swwnm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4si1"]
atlas = ExtResource("1_swwnm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gljc"]
atlas = ExtResource("1_swwnm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblni"]
atlas = ExtResource("2_aiwxb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qknjf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_paq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4si1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gljc")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblni")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0x54u"]
size = Vector2(32, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcu1b"]
size = Vector2(36, 32)

[node name="slime" type="CharacterBody2D" groups=["enemy"]]
process_mode = 4
collision_layer = 9
collision_mask = 9
script = ExtResource("1_aiwxb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qknjf")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_0x54u")

[node name="player collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player collision"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_tcu1b")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="sfx_idle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_f4si1")
volume_db = -5.0

[node name="AudioListener2D" type="AudioListener2D" parent="sfx_idle"]

[node name="sfx_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5gljc")

[connection signal="body_entered" from="player collision" to="." method="_on_player_collision_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
